[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
ordered-float = "4.6"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"


